Realtime screen uses entity role #5435
Signed-off-by: ClementBouvierN <clement.bouvierneveu@rte-france.com>